# jornada-de-dados

./: README.md
bootcamps/cloud-aws/: app.py
bootcamps/cloud-aws/aula13/: msg_sender.py  pyproject.toml
bootcamps/cloud-aws/aula13/src/: msg_receiver.py  msg_sender.py
workshops/airflow/: pyproject.toml
workshops/airflow/.astro/: config.yaml
